grammar

program
  : statements

statement
  : { statements }
  | expression
  | assignment
  | DEL VAR [ expression ]
  | function_definition
  | if_statement
  | for_loop
  | while_loop

statements
  :
  | statement
  | statement ENDL statements
  | ENDL statements

assignment
  : left_side = expression
  | left_side + = expression
  | left_side - = expression
  | left_side * = expression
  | left_side / = expression

left_side
  : VAR
  | VAR [ expression ]

expression
  : addition expression_

expression_
  :
  | = = addition
  | ! = addition
  | < = addition
  | < addition
  | > = addition
  | > addition

addition
  : term addition_

addition_
  :
  | + term addition_
  | - term addition_

term
  : factor term_

term_
  :
  | * factor term_
  | / factor term_

factor
  : ( expression )
  | value

value
  : STR
  | INT
  | FLOAT
  | list
  | function_call
  | VAR [ expression ]

list
  : [ items ]

items
  :
  | expression items_

items_
  :
  | , expression items_

function_definition
  : FUNC VAR ( params ) { statements }

params
  :
  | VAR params_

params_
  :
  | , VAR params_

function_call
  : VAR ( items )

if_statement
  : IF expression { statements } elif_statement

elif_statement
  :
  | ELIF expression { statements } elif_statement
  | else_statement

else_statement
  : ELSE { statements }

for_loop
  : FOR VAR IN iterable { statements }

iterable
  : STR
  | list

while_loop
  : WHILE expression { statements }
